feat: clean-up openapis and add logo-small support for theme logo (#126)
