# src/main/openapi/openapi-bff.yaml
@@ -2,15 +2,19 @@
 openapi: 3.0.3
 info:
   title: onecx-shell-bff
-  description: Backend-For-Frontend (BFF) service for OneCX Shell. This API provides base configuration information for frontends.
+  description: This API provides endpoints to load essential data like workspace configurations for the shell
   version: 1.0.0
-  contact:
-    email: tkit_dev@1000kit.org
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
 servers:
   - url: http://onecx-shell-bff:8080/
+tags:
+  - name: workspaceConfig
+    description: Retrieve Workspace Configurations
+  - name: parameter
+    description: Retrieve Parameters
+  - name: userProfile
+    description: Retrieve the User Profile
+  - name: permission
+    description: Retrieve Permissions
 paths:
   /workspaceConfig:
     post:
@@ -19,7 +23,7 @@ paths:
           workspaceConfig:
             - read
       tags:
-        - "WorkspaceConfig"
+        - workspaceConfig
       description: Load all data needed by startup of OneCX UI (components, routes, slots, theme, workspace)
       operationId: loadWorkspaceConfig
       requestBody:
@@ -30,7 +34,7 @@ paths:
               $ref: '#/components/schemas/LoadWorkspaceConfigRequest'
       responses:
         '200':
-          description: OK
+          description: Workspace configuration retrieved successfully
           content:
             application/json:
               schema:
@@ -42,7 +46,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
         '404':
-          description: 'Not Found'
+          description: Workspace configuration not found
   /workspaceConfig/themes/{name}/favicon:
     get:
       x-onecx:
@@ -50,8 +54,8 @@ paths:
           workspaceConfig:
             - read
       tags:
-        - "WorkspaceConfig"
-      description: Load favicon by theme name
+        - workspaceConfig
+      description: Get favicon of a theme by its name
       operationId: getThemeFaviconByName
       parameters:
         - name: name
@@ -61,7 +65,7 @@ paths:
             type: string
       responses:
         200:
-          description: OK
+          description: Favicon retrieved successfully
           content:
             image/x-icon:
               schema:
@@ -70,7 +74,7 @@ paths:
                 type: string
                 format: binary
         404:
-          description: Not found
+          description: Favicon not found
 
   /workspaceConfig/themes/{name}/logo:
     get:
@@ -79,8 +83,8 @@ paths:
           workspaceConfig:
             - read
       tags:
-        - "WorkspaceConfig"
-      description: Load logo by theme name
+        - workspaceConfig
+      description: Get the logo of a theme by its name
       operationId: getThemeLogoByName
       parameters:
         - name: name
@@ -88,9 +92,15 @@ paths:
           required: true
           schema:
             type: string
+        - name: small
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
       responses:
         200:
-          description: OK
+          description: Logo retrieved successfully
           content:
             image/*:
               schema:
@@ -99,7 +109,7 @@ paths:
                 type: string
                 format: binary
         404:
-          description: Not found
+          description: Logo not found
   /parameters:
     post:
       x-onecx:
@@ -109,6 +119,7 @@ paths:
       tags:
         - parameter
       operationId: getParameters
+      description: Get all available parameters of the requested products
       requestBody:
         required: true
         content:
@@ -117,7 +128,7 @@ paths:
               $ref: '#/components/schemas/GetParametersRequest'
       responses:
         '200':
-          description: OK
+          description: Parameters retrieved successfully
           content:
             application/json:
               schema:
@@ -137,9 +148,10 @@ paths:
       tags:
         - userProfile
       operationId: getUserProfile
+      description: Get the user profile of the requesting user
       responses:
         '200':
-          description: OK
+          description: User profile retrieved successfully
           content:
             application/json:
               schema:
@@ -151,7 +163,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
         '404':
-          description: 'Not Found'
+          description: User profile not found
 
   /permissions:
     post:
@@ -162,6 +174,7 @@ paths:
       tags:
         - permission
       operationId: getPermissions
+      description: Get all permissions for a specific application by its id and product name
       requestBody:
         required: true
         content:
@@ -170,7 +183,7 @@ paths:
               $ref: '#/components/schemas/GetPermissionsRequest'
       responses:
         '200':
-          description: OK
+          description: Permissions retrieved successfully
           content:
             application/json:
               schema:
@@ -182,7 +195,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
         '404':
-          description: 'Not Found'
+          description: Permissions not found
 components:
   schemas:
     GetParametersRequest:
